Fixed account top-overflow issues

--- a/CSS/Account.css
+++ b/CSS/Account.css
@@ -73,11 +73,12 @@ nav a {
 .main {
     width: 100%;
     height: 100%;
+    display: grid;
+    grid-template-columns: 20% 80%;
 }
 
 /* The left side */
 .side-bar {
-    width: 20%;
     float: left;
     height: 100%;
     display: flex;
